--- a/blackjack.html
+++ b/blackjack.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="blackjack.css">
 </head>
 <body>
-    <h1>Blackjack </h1>
-    <p id="message-el">Want to play a round?</p>
+    <h1>Blackjack</h1>
+
+    <p id="message-el">Do you want to play a round?</p>
     <p id="cards-el">Cards:</p>
-    <p id="sum-el">Sum:</p>
+    <p class="sum-el">Sum:</p>
     <button onclick="startGame()">START GAME</button>
     <br>
     <button onclick="newCard()">NEW CARD</button>
